[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprite/obj.png" type="Texture" id=1]
[ext_resource path="res://script/PaddlePlayer.gd" type="Script" id=2]
[ext_resource path="res://script/Ball.gd" type="Script" id=3]
[ext_resource path="res://script/Game.gd" type="Script" id=4]
[ext_resource path="res://script/PaddleComputer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 304 )

[node name="GameManager" type="Node"]
script = ExtResource( 4 )

[node name="PaddlePlayer" type="KinematicBody2D" parent="."]
position = Vector2( 64, 288 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaddlePlayer"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PaddlePlayer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 32 )

[node name="PaddleComputer" type="KinematicBody2D" parent="."]
position = Vector2( 952, 288 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaddleComputer"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PaddleComputer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 32 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 512, 288 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( -2.38419e-07, 2.38419e-07 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 8, 0, 8, 8 )

[node name="Walls" type="Node" parent="."]

[node name="North" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/North"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Walls/North"]

[node name="South" type="StaticBody2D" parent="Walls"]
position = Vector2( 512, 600 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/South"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Walls/South"]

[node name="East" type="StaticBody2D" parent="Walls"]
position = Vector2( 1024, 296 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/East"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Walls/East"]

[node name="West" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 296 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/West"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Walls/West"]

[node name="UI" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 54.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="UI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 34.0
custom_constants/separation = 950

[node name="ScoreP1" type="Label" parent="UI/HBox"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 2

[node name="ScoreP2" type="Label" parent="UI/HBox"]
margin_left = 958.0
margin_right = 966.0
margin_bottom = 14.0
text = "0"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
